# weather-tgbot

./: .gitignore  Cargo.toml  README.md  bot_flow.md
.cursor/rules/: rust-dev-rules.mdc
example/: Cargo.toml  README.md
example/src/: main.rs
src/: alerts.rs  i18n.rs  lib.rs  main.rs  scheduler.rs  state.rs  storage.rs  weather_api.rs
src/bot/: mod.rs
tasks/: prd-telegram-weather-bot.md  tasks-prd-telegram-weather-bot.md
tester/: Cargo.toml
tester/src/: main.rs
