[workspace]
members = [
    "tester",
]

[package]
name = "weather-tgbot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.27"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = "0.34"
bincode = "1.3"
teloxide = { version = "0.15.0", features = ["macros"] }
tokio = { version = "1.45.1", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"
